test/corpus/enums.txt
===================================================================================================
Enum
===================================================================================================

enum SomeEnum {
  SomeEnum_Var1,
  SomeEnum_Var2 = 1,
  SomeEnum_Var3,
  SomeEnum_Var4 = 0x11,
}

---------------------------------------------------------------------------------------------------

(script
  (enum_decl
    name: (ident)
    definition: (enum_def
      (enum_member_decl
        name: (ident))
      (enum_member_decl
        name: (ident)
        value: (literal_int))
      (enum_member_decl
        name: (ident))
      (enum_member_decl
        name: (ident)
        value: (literal_hex)))))
