test/corpus/error_recovery.txt
===================================================================================================
Incomplete member access - trailing dot before semicolon
===================================================================================================

function test() {
    x = super.;
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl
    name: (ident)
    params: (func_params)
    definition: (func_block
      (expr_stmt
        (assign_op_expr
          left: (ident)
          op: (assign_op_direct)
          right: (member_access_expr
            (incomplete_member_access_expr
              accessor: (super_expr))))))))


===================================================================================================
Incomplete member access - trailing dot at end of line
===================================================================================================

function test() {
    obj.
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl
    name: (ident)
    params: (func_params)
    definition: (func_block
      (ERROR
        (member_access_expr
          (incomplete_member_access_expr
            accessor: (ident)))))))


===================================================================================================
Incomplete member access followed by statement - valid as single statement
===================================================================================================

function test() {
    obj.
    obj.meth(param);
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl
    name: (ident)
    params: (func_params)
    definition: (func_block
      (expr_stmt
        (func_call_expr
          func: (member_access_expr
            accessor: (member_access_expr
              accessor: (ident)
              member: (ident))
            member: (ident))
          args: (func_call_args
            (ident)))))))


===================================================================================================
Incomplete member access followed by statement - missing semicolon
===================================================================================================

function test() {
    obj.me
    obj.meth(param);
}

---------------------------------------------------------------------------------------------------

(script
  (func_decl
    name: (ident)
    params: (func_params)
    definition: (func_block
      (expr_stmt
        (func_call_expr
          func: (member_access_expr
            accessor: (member_access_expr
              accessor: (ident)
              member: (ident))
            (ERROR
              (ident))
            member: (ident))
          args: (func_call_args
            (ident)))))))
